--- a/index.html
+++ b/index.html
@@ -90,5 +90,73 @@
     <!-- style css  -->
     <link rel="stylesheet" href="./Assets/css/style.css" />
   </head>
-  <body></body>
+  <body style="height: 5000px">
+    <div class="header-fixed">
+      <div class="container">
+        <div class="header-top">
+          <a href="/">
+            <div class="logo">
+              <span class="logo__circle"></span>
+              <span class="logo__text">
+                <span class="logo__brand">shine</span>
+                <span class="logo__brand logo__brand--small">Smile</span>
+              </span>
+            </div>
+          </a>
+          <div class="navigation">
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a href="#!" class="navigation__link navigation__link--active">
+                  Home</a
+                >
+              </li>
+              <li class="navigation__item">
+                <a href="#!" class="navigation__link">Services</a>
+              </li>
+              <li class="navigation__item">
+                <a href="#!" class="navigation__link">About</a>
+              </li>
+              <li class="navigation__item">
+                <a href="#!" class="navigation__link">Doctors</a>
+              </li>
+            </ul>
+          </div>
+          <div class="header-top__btn-login">Log In</div>
+          <div class="header-top__btn-signup"><a href="#!">Sign up </a></div>
+        </div>
+      </div>
+    </div>
+    <!-- header -->
+    <header class="header">
+      <div class="container" style="height: 700px">
+        <div class="header-contents">
+          <div class="header-text">
+            <h1 class="header-title">Exceptional dental care for all ages.</h1>
+            <p class="header-desc">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+            <div class="header-row">
+              <div class="btn">
+                <a href="#!" class="btn-book">Book Online</a>
+              </div>
+              <a href="#!" class="header-phone">or call (123) 456-7890</a>
+            </div>
+          </div>
+          <div class="header-img">
+            <img
+              src="./Assets/img/Rectangle 10.png"
+              alt="Rectangle"
+              class="header-img--imgtop"
+            />
+            <img
+              src="./Assets/img/Rectangle 10.png"
+              alt="Rectangle"
+              class="header-img--imgbot"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
