--- a/index.html
+++ b/index.html
@@ -158,5 +158,75 @@
         </div>
       </div>
     </header>
+    <!-- services -->
+    <div class="services">
+      <div class="container">
+        <!-- title -->
+        <div class="services-title">
+          <h2 class="services-title__title">Our services</h2>
+          <p class="services-title__desc">
+            Exceptional dental care for all ages. Your great smile begins with a
+            great dentist.
+          </p>
+        </div>
+        <section class="services-content">
+          <div class="services-media">
+            <img
+              src="./Assets/img/services-img.png"
+              alt=""
+              class="services-img"
+            />
+          </div>
+          <!-- services-list -->
+          <div class="services-list">
+            <ul class="services-list__list">
+              <li class="services-list__item">
+                <img
+                  src="./Assets/img/toothsvg.svg"
+                  alt="ic-tooth"
+                  class="services-list__item-icon"
+                />
+                <div class="text">
+                  <h3 class="services-list__item__title">Oral Surgery</h3>
+                  <p class="services-list__item__desc">
+                    Everything you expect and then some. Cleanings, fillings,
+                    and x-rays.
+                  </p>
+                </div>
+              </li>
+              <li class="services-list__item">
+                <img
+                  src="./Assets/img/toothsvg.svg"
+                  alt="ic-tooth"
+                  class="services-list__item-icon"
+                />
+                <div class="text">
+                  <h3 class="services-list__item__title">Oral Surgery</h3>
+                  <p class="services-list__item__desc">
+                    Everything you expect and then some. Cleanings, fillings,
+                    and x-rays.
+                  </p>
+                </div>
+              </li>
+              <li class="services-list__item">
+                <img
+                  src="./Assets/img/toothsvg.svg"
+                  alt="ic-tooth"
+                  class="services-list__item-icon"
+                />
+                <div class="text">
+                  <h3 class="services-list__item__title">Oral Surgery</h3>
+                  <p class="services-list__item__desc">
+                    Everything you expect and then some. Cleanings, fillings,
+                    and x-rays.
+                  </p>
+                </div>
+              </li>
+            </ul>
+            <a href="#!" class="btn services-btn">All Services</a>
+          </div>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
