--- a/index.html
+++ b/index.html
@@ -228,5 +228,65 @@
         </section>
       </div>
     </div>
+    <!-- how-it-works -->
+    <div class="how">
+      <div></div>
+      <div class="container border">
+        <div class="how__header">
+          <h3 class="how__header__title">How it works</h3>
+          <p class="how__header__content">
+            Exceptional dental care for all ages. Your great smile begins with a
+            great dentist.
+          </p>
+        </div>
+        <!-- list -->
+        <div class="how__list">
+          <ul class="list">
+            <!-- item 1-->
+            <li class="item">
+              <img
+                src="./Assets/img/Orion_search.svg"
+                alt="sreach"
+                class="how__list__ic"
+              />
+              <h3 class="how__list__title">Search doctor</h3>
+              <p class="how__list__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="how__list__link">Learn More</a>
+            </li>
+            <!-- item 2-->
+            <li class="item">
+              <img
+                src="./Assets/img/Orion_find-user.svg"
+                alt="sreach"
+                class="how__list__ic"
+              />
+              <h3 class="how__list__title">Find best doctor</h3>
+              <p class="how__list__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="how__list__link">Learn More</a>
+            </li>
+            <!-- item 3-->
+            <li class="item">
+              <img
+                src="./Assets/img/Orion_first-aid-kit.svg"
+                alt="sreach"
+                class="how__list__ic"
+              />
+              <h3 class="how__list__title">Get treatment</h3>
+              <p class="how__list__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="how__list__link">Learn More</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
