--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <!-- how-it-works -->
     <div class="how">
       <div></div>
-      <div class="container border">
+      <div class="container">
         <div class="how__header">
           <h3 class="how__header__title">How it works</h3>
           <p class="how__header__content">
@@ -285,6 +285,27 @@
               <a href="#!" class="how__list__link">Learn More</a>
             </li>
           </ul>
+        </div>
+      </div>
+    </div>
+    <!-- about-us -->
+    <div class="about">
+      <div class="container">
+        <div class="about__img">
+          <img
+            src="./Assets/img/aboutbot1.png"
+            alt=""
+            class="about__img--bot"
+          />
+          <img src="./Assets/img/abouttop.png" alt="" class="about__img--top" />
+        </div>
+        <div class="about__text">
+          <h3 class="about__text--title">Take back your smile with shine.</h3>
+          <p class="about__text--desc">
+            If you’re missing multiple teeth due to decay, injury, or the
+            natural aging process, dentures might be the perfect solution.
+          </p>
+          <a href="#!" class="btn">Learn More</a>
         </div>
       </div>
     </div>
