--- a/index.html
+++ b/index.html
@@ -309,5 +309,90 @@
         </div>
       </div>
     </div>
+    <!-- team -->
+    <div class="team">
+      <div class="container">
+        <div class="team__text">
+          <h3 class="team__title">Our virtual dentist</h3>
+          <a href="#!" class="btn">Meet our dentist</a>
+        </div>
+        <div class="team__group">
+          <ul class="group">
+            <!-- item 1 -->
+            <li class="team__item">
+              <img
+                src="./Assets/img/docter.png"
+                alt="docter"
+                class="team__item--img"
+              />
+              <h4 class="team__item--name">Dr. Essence Page</h4>
+              <p class="team__item--info">DDS, California - Linda University</p>
+            </li>
+            <!-- item 2 -->
+
+            <li class="team__item">
+              <img
+                src="./Assets/img/docter1.png"
+                alt="docter"
+                class="team__item--img"
+              />
+              <h4 class="team__item--name">Dr. Essence Page</h4>
+              <p class="team__item--info">DDS, California - Linda University</p>
+            </li>
+            <!-- item 3 -->
+
+            <li class="team__item">
+              <img
+                src="./Assets/img/docter2.png"
+                alt="docter"
+                class="team__item--img"
+              />
+              <h4 class="team__item--name">Dr. Essence Page</h4>
+              <p class="team__item--info">DDS, California - Linda University</p>
+            </li>
+            <!-- item 4 -->
+
+            <li class="team__item">
+              <img
+                src="./Assets/img/docter3.png"
+                alt="docter"
+                class="team__item--img"
+              />
+              <h4 class="team__item--name">Dr. Essence Page</h4>
+              <p class="team__item--info">DDS, California - Linda University</p>
+            </li>
+          </ul>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="90"
+            height="36"
+            viewBox="0 0 90 36"
+            fill="none"
+          >
+            <circle cx="72" cy="18" r="18" fill="#2E80CE" />
+            <path
+              d="M69.5 13L74.5 18L69.5 23"
+              stroke="white"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <circle
+              cx="18"
+              cy="18"
+              r="17.5"
+              transform="matrix(-1 0 0 1 36 0)"
+              stroke="#575F66"
+            />
+            <path
+              d="M20.5 13L15.5 18L20.5 23"
+              stroke="#575F66"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </div>
+        <div class="team__arrow"></div>
+      </div>
+    </div>
   </body>
 </html>
