--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- style css  -->
     <link rel="stylesheet" href="./Assets/css/style.css" />
   </head>
-  <body style="height: 5000px">
+  <body style="height: 7000px">
     <div class="header-fixed">
       <div class="container">
         <div class="header-top">
@@ -310,7 +310,7 @@
       </div>
     </div>
     <!-- team -->
-    <div class="team">
+    <div class="team ">
       <div class="container">
         <div class="team__text">
           <h3 class="team__title">Our virtual dentist</h3>
@@ -391,8 +391,26 @@
             />
           </svg>
         </div>
-        <div class="team__arrow"></div>
+ 
+
       </div>
     </div>
+    <!-- CTA -->
+    <div class="CTA border">
+      <div class="container ">
+        <div class="container--bg">
+          <img src="./Assets/img/phone.png" alt="phone" class="phone">
+        <div class="cta__text">
+          <h3 class="cta__text--title">Take back your smile with dentures</h3>
+          <p class="cta__text--desc">If you’re missing multiple teeth due to decay, injury, or the natural aging process, dentures might be the perfect solution.</p>
+          <div class="cta__text--group">
+            <img src="./Assets/img/Google Play outline badge.png" alt="chPlay" class="chplay">
+            <img src="./Assets/img/App Store outline badge.png" alt="apple" class="apple">
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
+    
   </body>
 </html>
