--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       </div>
     </div>
     <!-- CTA -->
-    <div class="CTA border">
+    <div class="CTA ">
       <div class="container ">
         <div class="container--bg">
           <img src="./Assets/img/phone.png" alt="phone" class="phone">
@@ -411,6 +411,31 @@
         </div>
       </div>
     </div>
-    
+    <!-- blog -->
+    <div class="blog ">
+      <div class="container ">
+        <div class="blog__text ">
+          <h3 class="blog__text--title">Read Latest News & Events.</h3>
+          <a href="#!" class="blog__text--read">Read All Blog</a>
+          
+        </div> 
+        <!-- card--1 -->
+        <div class="blog__card ">
+          <div class="blog__card--img">
+            <img src="./Assets/img/card1.png" alt="card1" class="img1">
+          </div>
+          <h4 class="blog__card--title">Key Considerations for Regulatory Compliant.</h4>
+          <h4 class="blog__card--desc">It’s easy to think about medical care from a narrow perspective. You go to the hospital.</h4>
+          <a href="#!" class="blog__card--learn">Learn More</a>
+        </div>
+          <!-- card--2 -->
+        <div class="blog__card "> <div class="blog__card--img">
+          <img src="./Assets/img/card2.png" alt="card1" class="img1">
+        </div>
+        <h4 class="blog__card--title">What Is Population Health Management?</h4>
+        <h4 class="blog__card--desc">It’s easy to think about medical care from a narrow perspective. You go to the hospital.</h4>
+        <a href="#!" class="blog__card--learn">Learn More</a></div>
+      </div>
+    </div>
   </body>
 </html>
