--- a/index.html
+++ b/index.html
@@ -437,5 +437,13 @@
         <a href="#!" class="blog__card--learn">Learn More</a></div>
       </div>
     </div>
+    <!-- CTAb -->
+    <div class="ctab ">
+      <div class="container border">
+        <h3 class="ctab__title">Always welcoming new patients</h3>
+        <p class="ctab__desc">Take control of your dental health and get the personalized care you deserve. Call (541) 772-8846 to  schedule</p>
+        <a href="#!" class="btn">Appointment</a>
+      </div>
+    </div>
   </body>
 </html>
